[package]
name = "slog-imgui"
version = "0.0.1"
edition = "2021"
description = "Dear ImGui window and drain with async capabilities for slog-rs"
homepage = "https://github.com/kelpsyberry/slog-imgui"
repository = "https://github.com/kelpsyberry/slog-imgui"
license = "MIT OR Apache-2.0"
keywords = ["slog", "logging", "log", "imgui"]

[features]
nightly = []
async = ["crossbeam-channel"]

[dependencies]
imgui = "0.11"
slog = "2.7"
ahash = "0.8"
crossbeam-channel = { version = "0.5", optional = true }

[dev-dependencies]
crossbeam-channel = "0.5"
